5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1585_1017.log
== SUBMITION (2019-03-26 10:43:11) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
					
g round(d, 6)
					
print(g)
-- EXECUTION TIME:
0.16775
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d = d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g)
                                                          ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:13) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
					
g round(d, 6)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
                                                          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:43:25) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
					
g round(d, 6)
					
print(g)
-- EXECUTION TIME:
0.212407
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g)
                                                        ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:43:28) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
					
g round(d, 6)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g)
                                                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:44:16) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g)
					
g round(d, 6)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g)
                                                                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:45:07) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g)
					
g round(d, 6)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g)
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:10) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g)
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g)
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:46:59) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g)
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g)
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:28) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2)
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2)
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:47:53) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:06) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2)
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2)
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:44) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * cos(g1) − cos(g2)
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * cos(g1) − cos(g2)
                                                                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:49:13) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * (cos(g1) − cos(g2))
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1)) * sin(t2) + cos(t1) * cos(t2) * (cos(g1) − cos(g2))
                                                                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:50:18) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*(cos(g1)−cos(g2))
					
g = round(d, 2)
					
print(g)
-- ERROR:
File "XXXX", line 10
    d = R*acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*(cos(g1)−cos(g2))
                                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:13) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1 - g2))
					
g = round(d, 2)
					
print(g)
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:51:50) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1 - g2))
					
g = round(d, 2)
					
print(g)
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:52:37) 
-- CODE:
from math import * 

t1 = radians(float(input("latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("latitude de P2: ")))
g2 = radians(float(input("longitude de P2: ")))

R = 6371.01

d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1 - g2))
					
g = round(d, 2)
					
print(g)
-- EXECUTION TIME:
0.140324
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
